<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <SwitchPreferenceCompat
            app:key="useCamera"
            app:title="@string/useCamera" />
        <SwitchPreferenceCompat
            app:key="useMobileNetDetectionModel"
            app:title="@string/useMobileNetDetectionModel" />
    </PreferenceCategory>
    <PreferenceCategory app:title="File">
        <DropDownPreference
            app:defaultValue="test_g0"
            app:entries="@array/image_files_names"
            app:entryValues="@array/image_files_values"
            app:key="selectFile"
            app:title="Select file"
            app:summary="%s"/>
    </PreferenceCategory>
</PreferenceScreen>
